--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.1"
+    "mongoose": "^6.7.1",
+    "swagger-ui-express": "^4.5.0"
   }
 }
